[gd_scene load_steps=2 format=3 uid="uid://c8h7v2x3lap0m"]

[ext_resource type="Script" uid="uid://c8bqhdg6pk2bo" path="res://addons/narrative_editor/narrative_editor_main_refactored.gd" id="1_main_editor"]

[node name="NarrativeEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_main_editor")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 18.0
offset_right = -35.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 300

[node name="LeftPanel" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="HSplitContainer/LeftPanel"]
layout_mode = 2
text = "叙事事件编辑器"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/LeftPanel"]
layout_mode = 2

[node name="EventsGroup" type="VBoxContainer" parent="HSplitContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="EventsLabel" type="Label" parent="HSplitContainer/LeftPanel/EventsGroup"]
layout_mode = 2
text = "事件列表:"

[node name="EventsScroll" type="ScrollContainer" parent="HSplitContainer/LeftPanel/EventsGroup"]
layout_mode = 2
size_flags_vertical = 3

[node name="EventsList" type="VBoxContainer" parent="HSplitContainer/LeftPanel/EventsGroup/EventsScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="HSplitContainer/LeftPanel"]
layout_mode = 2
alignment = 2

[node name="LoadEvents" type="Button" parent="HSplitContainer/LeftPanel/ButtonsContainer"]
layout_mode = 2
text = "载入事件"

[node name="ClearEvents" type="Button" parent="HSplitContainer/LeftPanel/ButtonsContainer"]
layout_mode = 2
text = "清空事件"

[node name="ExecuteEvents" type="Button" parent="HSplitContainer/LeftPanel/ButtonsContainer"]
layout_mode = 2
text = "保存事件"

[node name="RightPanel" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PropertiesTitle" type="Label" parent="HSplitContainer/RightPanel"]
layout_mode = 2
text = "事件属性编辑"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="HSplitContainer/RightPanel"]
layout_mode = 2

[node name="RightPanelScroll" type="ScrollContainer" parent="HSplitContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanelContent" type="VBoxContainer" parent="HSplitContainer/RightPanel/RightPanelScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EventTypeGroup" type="VBoxContainer" parent="HSplitContainer/RightPanel/RightPanelScroll/RightPanelContent"]
layout_mode = 2

[node name="EventTypeLabel" type="Label" parent="HSplitContainer/RightPanel/RightPanelScroll/RightPanelContent/EventTypeGroup"]
layout_mode = 2
text = "事件类型:"

[node name="EventTypeOption" type="OptionButton" parent="HSplitContainer/RightPanel/RightPanelScroll/RightPanelContent/EventTypeGroup"]
layout_mode = 2
selected = 0
item_count = 0
